--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^31.1.0",
         "admin-lte": "^3.1.0",
         "moment": "^2.29.1",
         "sweetalert2": "^11.3.1",
@@ -32,6 +33,7 @@
         "vform": "^2.1.2",
         "vue-router": "^3.5.3",
         "vue-sweetalert2": "^5.0.2",
+        "vue2-editor": "^2.10.3",
         "vuex": "^3.6.2"
     }
 }
